--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.36",
+      "moment": "^2.29.1",
+      "mysql": "^2.14.1",
+      "nodemon": "^2.0.12",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.36"
    },
    "scripts": {
       "start": "ts-node src/index.ts"
